- Catenary Holder styles - weathered and single-wire. (Changed with wrench) - Modified the Catenary Holder model. - Creative Batteries now provide creative power to electric trains. - Fixed the lang issue on HV Switch ponders.